<resources>
    <string name="app_name">GeThere</string>
    <string name="button_enter_target">Enter target</string>
    <string name="button_find_poi">Find POI</string>
    <string name="button_add_poi">Add POI</string>
    <string name="button_view_map">View Map</string>
    <string name="list_of_pois">List of POIs</string>
    <string name="poi">POI</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_enter_target">EnterTargetActivity</string>
    <string name="title_activity_find_poi">FindPoiActivity</string>
    <string name="title_activity_add_poi">AddPoiActivity</string>
    <string name="title_activity_view_map">ViewMapActivity</string>
    <string name="title_activity_list_of_pois">ListOfPoisActivity</string>
    <string name="title_activity_poi">PoiActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="open_text">Open:</string>
    <string name="open_now_text">now</string>
    <string name="open_at_text">at</string>
    <string name="date_format_text">HH:MM</string>
    <string name="in_radius_text">in radius of</string>
    <string name="kilometers_text">km</string>
    <string name="choose_type_spinner">Choose the type of POI</string>
    <string name="attribute_filter_button">Add attribute filter</string>

    <string name="button_apply_target">Apply Target</string>

    <string name="edit_text_keyword">Enter your keyword</string>
    <string name="button_search_keyword">Search</string>

    <string name="edit_text_poi_name">POI Name</string>
    <string name="spinner_poi_type">Enter the type of POI</string>
    <string name="edit_text_type">Type</string>
    <string name="edit_text_latitude">Latitude</string>
    <string name="edit_text_longitude">Longitude</string>
    <string name="edit_text_opening_hours">Opening Hours</string>
    <string name="edit_text_opening_hour">Opening Hour</string>
    <string name="edit_text_closing_hour">Closing Hour</string>
    <string name="button_get_your_location">Get your location</string>
    <string name="button_add_attribute">Add attribute</string>

    <string name="poi_name">Name</string>
    <string name="poi_type">Type: </string>
    <string name="button_navigation">Navigate</string>

    <string name="maneuver_distance">mDistance</string>
    <string name="total_distance">tDistance</string>
    <string name="title_activity_maps">Map</string>
    <string name="request_direction">Request Direction</string>


</resources>
