<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:baselineAligned="false"
             android:stretchColumns="*"
             android:background="@drawable/background_wood">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none"
            android:layout_weight="1">


        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:text="@string/button_enter_target"
                        android:id="@+id/EnterTargetText"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/black_font"
                        android:typeface="serif"
                        android:background="@drawable/plank"
                        android:padding="10dp"
                        android:textSize="40sp"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:shadowColor="@color/grey_font"
                        android:layout_column="0"
                        android:gravity="center"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/open_text"
                        android:id="@+id/OpenText"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="3"/>

                <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/open_now_text"
                        android:id="@+id/OpenNowCheckBox"
                        android:layout_weight="8"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="#000000"
                        android:layout_marginRight="40dp"/>

            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/EmptyText"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="3"
                        android:phoneNumber="false"/>

                <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/open_at_text"
                        android:id="@+id/OpenAtCheckBox"
                        android:layout_weight="3"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        />

                <EditText
                        android:id="@+id/OpenAtEditText"
                        android:layout_height="40dp"
                        android:hint="@string/date_format_text"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:background="@android:drawable/editbox_dropdown_dark_frame"
                        android:textColor="#ffffff"
                        android:singleLine="true"
                        android:textColorHint="#a2a2b5"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:layout_marginRight="40dp"
                        android:enabled="false"
                        android:inputType="time"/>

            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/in_radius_text"
                        android:id="@+id/InRadiusCheckBox"
                        android:layout_weight="6"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        />

                <EditText
                        android:id="@+id/RadiusEditText"
                        android:layout_height="40dp"
                        android:hint="@string/kilometers_text"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:background="@android:drawable/editbox_dropdown_dark_frame"
                        android:textColor="#ffffff"
                        android:singleLine="true"
                        android:textColorHint="#a2a2b5"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:layout_marginRight="40dp"
                        android:inputType="date"
                        android:enabled="false"
                        android:layout_marginTop="10dp"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                <Spinner
                        style="@style/SpinnerItemStyle"
                        android:id="@+id/ChooseTypeSpinner"
                        android:layout_height="40dp"
                        android:layout_width="match_parent"
                        android:background="@color/background_floating_material_dark"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:spinnerMode="dialog"
                        android:visibility="visible"
                        android:prompt="@string/choose_type_spinner"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                <Button
                        android:id="@+id/button"
                        android:layout_height="40dp"
                        android:text="@string/attribute_filter_button"
                        android:onClick="addAttributeFilter"
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="100dp"
                        android:layout_marginRight="100dp"
                        android:background="@android:drawable/editbox_dropdown_dark_frame"
                        android:textSize="18sp"/>
            </TableRow>

            <pl.edu.agh.gethere.utils.NonScrollableListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/AttributeFilterListView"
                    android:padding="20dp"
                    android:layout_weight="1"/>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    >

                <Button
                        android:id="@+id/ButtonApplyTarget"
                        android:layout_height="50dp"
                        android:text="@string/button_apply_target"
                        android:onClick="applyTarget"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="70dp"
                        android:layout_marginRight="70dp"
                        android:background="@color/background_material_dark"
                        android:textSize="24sp">
                </Button>

            </TableRow>
        </TableLayout>
    </ScrollView>

</TableLayout>