<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:baselineAligned="false"
             android:stretchColumns="*"
             android:background="@drawable/background_wood">

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/button_find_poi"
                android:id="@+id/textView"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:textStyle="bold|italic"
                android:textColor="@color/black_font"
                android:typeface="serif"
                android:background="@drawable/plank"
                android:padding="10dp"
                android:textSize="40sp"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:shadowColor="@color/grey_font"
                android:layout_column="0"
                android:gravity="center"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/EditTextKeyword"
                android:layout_height="50dp"
                android:hint="@string/edit_text_keyword"
                android:inputType="textPersonName"
                android:layout_width="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@android:drawable/editbox_dropdown_dark_frame"
                android:textColor="#ffffff"
                android:singleLine="true"
                android:textColorHint="#a2a2b5"
                android:textSize="24sp"
                android:paddingLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

        <Button
                android:id="@+id/ButtonSearchKeyword"
                android:layout_height="50dp"
                android:text="@string/button_search_keyword"
                android:onClick="searchKeyword"
                android:layout_width="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="110dp"
                android:background="@color/background_material_dark"
                android:textSize="24sp"
                android:layout_marginTop="30dp">
        </Button>

    </TableRow>


</TableLayout>